// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Resume > renders correctly and matches snapshot 1`] = `
<div>
  <div
    class="_wrapper_c6a955"
  >
    <div
      class="_resumeHeader_c6a955"
    >
      <div
        class="_main_c6a955"
      >
        <div
          class="_section_c6a955"
        >
          <div
            class="_details_c6a955"
          >
            <p
              class="_name_c6a955"
            >
              Jean Luis Ureña
            </p>
            <div
              class="_contact_c6a955"
            >
              <span>
                <span>
                  N
                </span>
                <span>
                  Y
                </span>
                <span>
                  C
                </span>
              </span>
              <span
                class="_separator_c6a955"
              >
                ·
              </span>
              <span>
                <span>
                  e
                </span>
                <span>
                  l
                </span>
                <span>
                  j
                </span>
                <span>
                  e
                </span>
                <span>
                  a
                </span>
                <span>
                  n
                </span>
                <span>
                  @
                </span>
                <span>
                  l
                </span>
                <span>
                  i
                </span>
                <span>
                  v
                </span>
                <span>
                  e
                </span>
                <span>
                  .
                </span>
                <span>
                  c
                </span>
                <span>
                  o
                </span>
                <span>
                  m
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="_side_c6a955"
      />
    </div>
    <div
      class="_resumeBody_c6a955"
    >
      <div
        class="_main_c6a955"
      >
        <div
          class="_section_c6a955"
        >
          <div
            aria-label="PROFILE"
            aria-level="2"
            class="_sectionHeader_c6a955"
            role="heading"
          >
            <span
              aria-hidden="true"
            >
              P
            </span>
            <span
              aria-hidden="true"
            >
              R
            </span>
            <span
              aria-hidden="true"
            >
              O
            </span>
            <span
              aria-hidden="true"
            >
              F
            </span>
            <span
              aria-hidden="true"
            >
              I
            </span>
            <span
              aria-hidden="true"
            >
              L
            </span>
            <span
              aria-hidden="true"
            >
              E
            </span>
          </div>
          <div
            class="_content_c6a955"
          >
            <div
              class="_experience_c6a955"
            >
              <div
                class="_experienceDescription_c6a955"
              >
                <p
                  class="_experienceSummary_c6a955"
                >
                  Software Engineering Lead focused on empowering and guiding teams on executing and delivering  quality, smart and scalable solutions that benefit all.

                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="_section_c6a955"
        >
          <div
            aria-label="EDUCATION"
            aria-level="2"
            class="_sectionHeader_c6a955"
            role="heading"
          >
            <span
              aria-hidden="true"
            >
              E
            </span>
            <span
              aria-hidden="true"
            >
              D
            </span>
            <span
              aria-hidden="true"
            >
              U
            </span>
            <span
              aria-hidden="true"
            >
              C
            </span>
            <span
              aria-hidden="true"
            >
              A
            </span>
            <span
              aria-hidden="true"
            >
              T
            </span>
            <span
              aria-hidden="true"
            >
              I
            </span>
            <span
              aria-hidden="true"
            >
              O
            </span>
            <span
              aria-hidden="true"
            >
              N
            </span>
          </div>
          <div
            class="_content_c6a955"
          >
            <div
              class="_experience_c6a955"
            >
              <div
                class="_experienceContainer_c6a955"
              >
                <div
                  class="_experienceName_c6a955"
                >
                  <span>
                    Rochester Institute of Technology
                  </span>
                </div>
                <div
                  class="_experienceHistoryContainer_c6a955"
                >
                  <div
                    class="_experienceTitle_c6a955"
                  >
                    <span>
                      B.S in Computer Science
                    </span>
                    <span>
                      Class of 2018
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="_section_c6a955"
        >
          <div
            aria-label="EXPERIENCE"
            aria-level="2"
            class="_sectionHeader_c6a955"
            role="heading"
          >
            <span
              aria-hidden="true"
            >
              E
            </span>
            <span
              aria-hidden="true"
            >
              X
            </span>
            <span
              aria-hidden="true"
            >
              P
            </span>
            <span
              aria-hidden="true"
            >
              E
            </span>
            <span
              aria-hidden="true"
            >
              R
            </span>
            <span
              aria-hidden="true"
            >
              I
            </span>
            <span
              aria-hidden="true"
            >
              E
            </span>
            <span
              aria-hidden="true"
            >
              N
            </span>
            <span
              aria-hidden="true"
            >
              C
            </span>
            <span
              aria-hidden="true"
            >
              E
            </span>
          </div>
          <div
            class="_content_c6a955"
          >
            <div
              class="_experience_c6a955"
            >
              <div
                class="_experienceContainer_c6a955"
              >
                <div
                  class="_experienceName_c6a955"
                >
                  <span>
                    Teladoc Health
                  </span>
                </div>
                <div
                  class="_experienceHistoryContainer_c6a955"
                >
                  <div
                    class="_experienceTitle_c6a955"
                  >
                    <span>
                      Software Engineering Manager
                    </span>
                    <span>
                      03/2022 - Present
                    </span>
                  </div>
                  <div
                    class="_experienceTitle_c6a955"
                  >
                    <span>
                      Senior Software Engineer,
                    </span>
                    <span>
                      03/2021, - 03/2022
                    </span>
                  </div>
                  <div
                    class="_experienceTitle_c6a955"
                  >
                    <span>
                      Software Engineer,
                    </span>
                    <span>
                      03/2020, - 03/2021
                    </span>
                  </div>
                  <div
                    class="_experienceTitle_c6a955"
                  >
                    <span>
                      Associate Software Engineer,
                    </span>
                    <span>
                      01/2018, - 03/2020
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="_experienceDescription_c6a955"
              >
                <span
                  class="_experienceHeader_c6a955"
                >
                  <span>
                    O
                  </span>
                  <span>
                    v
                  </span>
                  <span>
                    e
                  </span>
                  <span>
                    r
                  </span>
                  <span>
                    v
                  </span>
                  <span>
                    i
                  </span>
                  <span>
                    e
                  </span>
                  <span>
                    w
                  </span>
                </span>
                <p
                  class="_experienceSummary_c6a955"
                >
                  Manage, direct and guide software engineers in software design and architecture,  lead and mentor, ensure delivery and execution of cross functional projects. Work across various departments to ensure technological business needs are met, end to end.

                </p>
                <span
                  class="_experienceHeader_c6a955"
                >
                  <span>
                    M
                  </span>
                  <span>
                    a
                  </span>
                  <span>
                    j
                  </span>
                  <span>
                    o
                  </span>
                  <span>
                    r
                  </span>
                  <span>
                     
                  </span>
                  <span>
                    A
                  </span>
                  <span>
                    c
                  </span>
                  <span>
                    c
                  </span>
                  <span>
                    o
                  </span>
                  <span>
                    m
                  </span>
                  <span>
                    p
                  </span>
                  <span>
                    l
                  </span>
                  <span>
                    i
                  </span>
                  <span>
                    s
                  </span>
                  <span>
                    h
                  </span>
                  <span>
                    m
                  </span>
                  <span>
                    e
                  </span>
                  <span>
                    n
                  </span>
                  <span>
                    t
                  </span>
                  <span>
                    s
                  </span>
                </span>
                <ul
                  class="_accomplishmentList_c6a955"
                >
                  <li>
                    Delivered a massive project that single handedly  changed the fundamental relationship between the users  and their benefits (products, ie Virtual Mental Health visits, a user has access to).  This allowed about 25% of users, to retain a single login account for all of their benefits,  despite the multiple benefits the user may have had from Teladoc Health's multiple acquisitions.  It also set the pavement for better new/extension of client contracts,  as well as smarter and improved scalable integrations with all of Teladoc Health's acquisitions

                  </li>
                  <li>
                    Facilitated major improvements to one of our major codebase that reduced the  boilerplate code necessary to service newly acquired whitelabeled/branded clients. This resulted  in reduced development time from 2-3 months to 1-2 months,  thus servicing new clients up to two months faster

                  </li>
                </ul>
              </div>
            </div>
            <div
              class="_experience_c6a955"
            >
              <div
                class="_experienceContainer_c6a955"
              >
                <div
                  class="_experienceName_c6a955"
                >
                  <span>
                    Flatiron School
                  </span>
                </div>
                <div
                  class="_experienceHistoryContainer_c6a955"
                >
                  <div
                    class="_experienceTitle_c6a955"
                  >
                    <span>
                      Course Facilitator
                    </span>
                    <span>
                      02/2025 - Present
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="_experienceDescription_c6a955"
              >
                <span
                  class="_experienceHeader_c6a955"
                >
                  <span>
                    O
                  </span>
                  <span>
                    v
                  </span>
                  <span>
                    e
                  </span>
                  <span>
                    r
                  </span>
                  <span>
                    v
                  </span>
                  <span>
                    i
                  </span>
                  <span>
                    e
                  </span>
                  <span>
                    w
                  </span>
                </span>
                <p
                  class="_experienceSummary_c6a955"
                >
                  Code instructor at NuCamp Bootcamp, a technical "bootcamp" for adults looking to become Software Engineers

                </p>
              </div>
            </div>
            <div
              class="_experience_c6a955"
            >
              <div
                class="_experienceContainer_c6a955"
              >
                <div
                  class="_experienceName_c6a955"
                >
                  <span>
                    NuCamp Bootcamp
                  </span>
                </div>
                <div
                  class="_experienceHistoryContainer_c6a955"
                >
                  <div
                    class="_experienceTitle_c6a955"
                  >
                    <span>
                      Code Instructor
                    </span>
                    <span>
                      02/2022 - 02/2024
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="_experienceDescription_c6a955"
              >
                <span
                  class="_experienceHeader_c6a955"
                >
                  <span>
                    O
                  </span>
                  <span>
                    v
                  </span>
                  <span>
                    e
                  </span>
                  <span>
                    r
                  </span>
                  <span>
                    v
                  </span>
                  <span>
                    i
                  </span>
                  <span>
                    e
                  </span>
                  <span>
                    w
                  </span>
                </span>
                <p
                  class="_experienceSummary_c6a955"
                >
                  Code instructor at NuCamp Bootcamp, a technical "bootcamp" for adults looking to become Software Engineers

                </p>
              </div>
            </div>
            <div
              class="_experience_c6a955"
            >
              <div
                class="_experienceContainer_c6a955"
              >
                <div
                  class="_experienceName_c6a955"
                >
                  <span>
                    Research Foundation City University of New York
                  </span>
                </div>
                <div
                  class="_experienceHistoryContainer_c6a955"
                >
                  <div
                    class="_experienceTitle_c6a955"
                  >
                    <span>
                      Teacher Assistant
                    </span>
                    <span>
                      06/2023 - 08/2023
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="_experienceDescription_c6a955"
              >
                <span
                  class="_experienceHeader_c6a955"
                >
                  <span>
                    O
                  </span>
                  <span>
                    v
                  </span>
                  <span>
                    e
                  </span>
                  <span>
                    r
                  </span>
                  <span>
                    v
                  </span>
                  <span>
                    i
                  </span>
                  <span>
                    e
                  </span>
                  <span>
                    w
                  </span>
                </span>
                <p
                  class="_experienceSummary_c6a955"
                >
                  Teacher assistant at the RF CUNY Coding Bootcamp. A technical bootcamp for adults looking to become software engineers.  Here I help students to break down the concepts they learned in class, support students with their workload and review and grade the assignments submitted by the students

                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="_side_c6a955"
      >
        <div
          class="_section_c6a955"
        >
          <div
            aria-label="LINKS"
            aria-level="2"
            class="_sectionHeader_c6a955"
            role="heading"
          >
            <span
              aria-hidden="true"
            >
              L
            </span>
            <span
              aria-hidden="true"
            >
              I
            </span>
            <span
              aria-hidden="true"
            >
              N
            </span>
            <span
              aria-hidden="true"
            >
              K
            </span>
            <span
              aria-hidden="true"
            >
              S
            </span>
          </div>
          <div
            class="_linksContainer_c6a955"
          >
            <div
              class="_iconLinkContainer_c6a955"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-globe "
                data-icon="globe"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M352 256c0 22.2-1.2 43.6-3.3 64l-185.3 0c-2.2-20.4-3.3-41.8-3.3-64s1.2-43.6 3.3-64l185.3 0c2.2 20.4 3.3 41.8 3.3 64zm28.8-64l123.1 0c5.3 20.5 8.1 41.9 8.1 64s-2.8 43.5-8.1 64l-123.1 0c2.1-20.6 3.2-42 3.2-64s-1.1-43.4-3.2-64zm112.6-32l-116.7 0c-10-63.9-29.8-117.4-55.3-151.6c78.3 20.7 142 77.5 171.9 151.6zm-149.1 0l-176.6 0c6.1-36.4 15.5-68.6 27-94.7c10.5-23.6 22.2-40.7 33.5-51.5C239.4 3.2 248.7 0 256 0s16.6 3.2 27.8 13.8c11.3 10.8 23 27.9 33.5 51.5c11.6 26 20.9 58.2 27 94.7zm-209 0L18.6 160C48.6 85.9 112.2 29.1 190.6 8.4C165.1 42.6 145.3 96.1 135.3 160zM8.1 192l123.1 0c-2.1 20.6-3.2 42-3.2 64s1.1 43.4 3.2 64L8.1 320C2.8 299.5 0 278.1 0 256s2.8-43.5 8.1-64zM194.7 446.6c-11.6-26-20.9-58.2-27-94.6l176.6 0c-6.1 36.4-15.5 68.6-27 94.6c-10.5 23.6-22.2 40.7-33.5 51.5C272.6 508.8 263.3 512 256 512s-16.6-3.2-27.8-13.8c-11.3-10.8-23-27.9-33.5-51.5zM135.3 352c10 63.9 29.8 117.4 55.3 151.6C112.2 482.9 48.6 426.1 18.6 352l116.7 0zm358.1 0c-30 74.1-93.6 130.9-171.9 151.6c25.5-34.2 45.2-87.7 55.3-151.6l116.7 0z"
                  fill="currentColor"
                />
              </svg>
              <a
                href="https://jlurena.me"
                rel="noreferrer"
                target="_blank"
              >
                jlurena.me
              </a>
            </div>
            <div
              class="_iconLinkContainer_c6a955"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-github "
                data-icon="github"
                data-prefix="fab"
                focusable="false"
                role="img"
                viewBox="0 0 496 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
                  fill="currentColor"
                />
              </svg>
              <a
                href="https://github.com/jlurena"
                rel="noreferrer"
                target="_blank"
              >
                github.com/jlurena
              </a>
            </div>
            <div
              class="_iconLinkContainer_c6a955"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-medium "
                data-icon="medium"
                data-prefix="fab"
                focusable="false"
                role="img"
                viewBox="0 0 640 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M180.5,74.262C80.813,74.262,0,155.633,0,256S80.819,437.738,180.5,437.738,361,356.373,361,256,280.191,74.262,180.5,74.262Zm288.25,10.646c-49.845,0-90.245,76.619-90.245,171.095s40.406,171.1,90.251,171.1,90.251-76.619,90.251-171.1H559C559,161.5,518.6,84.908,468.752,84.908Zm139.506,17.821c-17.526,0-31.735,68.628-31.735,153.274s14.2,153.274,31.735,153.274S640,340.631,640,256C640,171.351,625.785,102.729,608.258,102.729Z"
                  fill="currentColor"
                />
              </svg>
              <a
                href="https://medium.com/@jlurena123"
                rel="noreferrer"
                target="_blank"
              >
                medium.com/@jlurena123
              </a>
            </div>
          </div>
        </div>
        <div
          class="_section_c6a955"
        >
          <div
            aria-label="SKILLS"
            aria-level="2"
            class="_sectionHeader_c6a955"
            role="heading"
          >
            <span
              aria-hidden="true"
            >
              S
            </span>
            <span
              aria-hidden="true"
            >
              K
            </span>
            <span
              aria-hidden="true"
            >
              I
            </span>
            <span
              aria-hidden="true"
            >
              L
            </span>
            <span
              aria-hidden="true"
            >
              L
            </span>
            <span
              aria-hidden="true"
            >
              S
            </span>
          </div>
          <div
            class="_skillsContainer_c6a955"
          >
            <ul
              class="_skillsList_c6a955"
            >
              <li>
                <span>
                  Object Oriented Programming
                </span>
                <ul>
                  <li>
                    Java
                  </li>
                  <li>
                    Javascript
                  </li>
                  <li>
                    Python
                  </li>
                  <li>
                    Ruby
                  </li>
                  <li>
                    Scala
                  </li>
                </ul>
              </li>
              <li>
                <span>
                  Libraries & Framework
                </span>
                <ul>
                  <li>
                    Android Studios
                  </li>
                  <li>
                    Node.js
                  </li>
                  <li>
                    Play Framework
                  </li>
                  <li>
                    React.js
                  </li>
                  <li>
                    Ruby on Rails
                  </li>
                </ul>
              </li>
              <li>
                <span>
                  Data Stores
                </span>
                <ul>
                  <li>
                    ElasticSearch
                  </li>
                  <li>
                    MySQL
                  </li>
                  <li>
                    PostgreSQL
                  </li>
                  <li>
                    Redis/Memcached
                  </li>
                </ul>
              </li>
              <li>
                <span>
                  Devops & Infrastructure
                </span>
                <ul>
                  <li>
                    AWS
                  </li>
                  <li>
                    Azure
                  </li>
                  <li>
                    Jenkins
                  </li>
                  <li>
                    Linux/Unix
                  </li>
                  <li>
                    Shell Scripting
                  </li>
                </ul>
              </li>
              <li>
                <span>
                  Project Management
                </span>
              </li>
              <li>
                <span>
                  Fluent in Spanish
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      class="_resumeFooter_c6a955"
    >
      <div
        class="_container_1af848"
      >
        <a
          aria-label="Open in new tab"
          href="http://localhost:3000/?resumeOnly=true"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-up-right-from-square "
            data-icon="up-right-from-square"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M352 0c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9L370.7 96 201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L416 141.3l41.4 41.4c9.2 9.2 22.9 11.9 34.9 6.9s19.8-16.6 19.8-29.6l0-128c0-17.7-14.3-32-32-32L352 0zM80 32C35.8 32 0 67.8 0 112L0 432c0 44.2 35.8 80 80 80l320 0c44.2 0 80-35.8 80-80l0-112c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 112c0 8.8-7.2 16-16 16L80 448c-8.8 0-16-7.2-16-16l0-320c0-8.8 7.2-16 16-16l112 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L80 32z"
              fill="currentColor"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Resume > renders with resumeOnly=true in URL and matches snapshot 1`] = `
<div>
  <div
    class="_wrapper_c6a955"
  >
    <div
      class="_resumeHeader_c6a955"
    >
      <div
        class="_main_c6a955"
      >
        <div
          class="_section_c6a955"
        >
          <div
            class="_details_c6a955"
          >
            <p
              class="_name_c6a955"
            >
              Jean Luis Ureña
            </p>
            <div
              class="_contact_c6a955"
            >
              <span>
                <span>
                  N
                </span>
                <span>
                  Y
                </span>
                <span>
                  C
                </span>
              </span>
              <span
                class="_separator_c6a955"
              >
                ·
              </span>
              <span>
                <span>
                  e
                </span>
                <span>
                  l
                </span>
                <span>
                  j
                </span>
                <span>
                  e
                </span>
                <span>
                  a
                </span>
                <span>
                  n
                </span>
                <span>
                  @
                </span>
                <span>
                  l
                </span>
                <span>
                  i
                </span>
                <span>
                  v
                </span>
                <span>
                  e
                </span>
                <span>
                  .
                </span>
                <span>
                  c
                </span>
                <span>
                  o
                </span>
                <span>
                  m
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="_side_c6a955"
      />
    </div>
    <div
      class="_resumeBody_c6a955"
    >
      <div
        class="_main_c6a955"
      >
        <div
          class="_section_c6a955"
        >
          <div
            aria-label="PROFILE"
            aria-level="2"
            class="_sectionHeader_c6a955"
            role="heading"
          >
            <span
              aria-hidden="true"
            >
              P
            </span>
            <span
              aria-hidden="true"
            >
              R
            </span>
            <span
              aria-hidden="true"
            >
              O
            </span>
            <span
              aria-hidden="true"
            >
              F
            </span>
            <span
              aria-hidden="true"
            >
              I
            </span>
            <span
              aria-hidden="true"
            >
              L
            </span>
            <span
              aria-hidden="true"
            >
              E
            </span>
          </div>
          <div
            class="_content_c6a955"
          >
            <div
              class="_experience_c6a955"
            >
              <div
                class="_experienceDescription_c6a955"
              >
                <p
                  class="_experienceSummary_c6a955"
                >
                  Software Engineering Lead focused on empowering and guiding teams on executing and delivering  quality, smart and scalable solutions that benefit all.

                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="_section_c6a955"
        >
          <div
            aria-label="EDUCATION"
            aria-level="2"
            class="_sectionHeader_c6a955"
            role="heading"
          >
            <span
              aria-hidden="true"
            >
              E
            </span>
            <span
              aria-hidden="true"
            >
              D
            </span>
            <span
              aria-hidden="true"
            >
              U
            </span>
            <span
              aria-hidden="true"
            >
              C
            </span>
            <span
              aria-hidden="true"
            >
              A
            </span>
            <span
              aria-hidden="true"
            >
              T
            </span>
            <span
              aria-hidden="true"
            >
              I
            </span>
            <span
              aria-hidden="true"
            >
              O
            </span>
            <span
              aria-hidden="true"
            >
              N
            </span>
          </div>
          <div
            class="_content_c6a955"
          >
            <div
              class="_experience_c6a955"
            >
              <div
                class="_experienceContainer_c6a955"
              >
                <div
                  class="_experienceName_c6a955"
                >
                  <span>
                    Rochester Institute of Technology
                  </span>
                </div>
                <div
                  class="_experienceHistoryContainer_c6a955"
                >
                  <div
                    class="_experienceTitle_c6a955"
                  >
                    <span>
                      B.S in Computer Science
                    </span>
                    <span>
                      Class of 2018
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="_section_c6a955"
        >
          <div
            aria-label="EXPERIENCE"
            aria-level="2"
            class="_sectionHeader_c6a955"
            role="heading"
          >
            <span
              aria-hidden="true"
            >
              E
            </span>
            <span
              aria-hidden="true"
            >
              X
            </span>
            <span
              aria-hidden="true"
            >
              P
            </span>
            <span
              aria-hidden="true"
            >
              E
            </span>
            <span
              aria-hidden="true"
            >
              R
            </span>
            <span
              aria-hidden="true"
            >
              I
            </span>
            <span
              aria-hidden="true"
            >
              E
            </span>
            <span
              aria-hidden="true"
            >
              N
            </span>
            <span
              aria-hidden="true"
            >
              C
            </span>
            <span
              aria-hidden="true"
            >
              E
            </span>
          </div>
          <div
            class="_content_c6a955"
          >
            <div
              class="_experience_c6a955"
            >
              <div
                class="_experienceContainer_c6a955"
              >
                <div
                  class="_experienceName_c6a955"
                >
                  <span>
                    Teladoc Health
                  </span>
                </div>
                <div
                  class="_experienceHistoryContainer_c6a955"
                >
                  <div
                    class="_experienceTitle_c6a955"
                  >
                    <span>
                      Software Engineering Manager
                    </span>
                    <span>
                      03/2022 - Present
                    </span>
                  </div>
                  <div
                    class="_experienceTitle_c6a955"
                  >
                    <span>
                      Senior Software Engineer,
                    </span>
                    <span>
                      03/2021, - 03/2022
                    </span>
                  </div>
                  <div
                    class="_experienceTitle_c6a955"
                  >
                    <span>
                      Software Engineer,
                    </span>
                    <span>
                      03/2020, - 03/2021
                    </span>
                  </div>
                  <div
                    class="_experienceTitle_c6a955"
                  >
                    <span>
                      Associate Software Engineer,
                    </span>
                    <span>
                      01/2018, - 03/2020
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="_experienceDescription_c6a955"
              >
                <span
                  class="_experienceHeader_c6a955"
                >
                  <span>
                    O
                  </span>
                  <span>
                    v
                  </span>
                  <span>
                    e
                  </span>
                  <span>
                    r
                  </span>
                  <span>
                    v
                  </span>
                  <span>
                    i
                  </span>
                  <span>
                    e
                  </span>
                  <span>
                    w
                  </span>
                </span>
                <p
                  class="_experienceSummary_c6a955"
                >
                  Manage, direct and guide software engineers in software design and architecture,  lead and mentor, ensure delivery and execution of cross functional projects. Work across various departments to ensure technological business needs are met, end to end.

                </p>
                <span
                  class="_experienceHeader_c6a955"
                >
                  <span>
                    M
                  </span>
                  <span>
                    a
                  </span>
                  <span>
                    j
                  </span>
                  <span>
                    o
                  </span>
                  <span>
                    r
                  </span>
                  <span>
                     
                  </span>
                  <span>
                    A
                  </span>
                  <span>
                    c
                  </span>
                  <span>
                    c
                  </span>
                  <span>
                    o
                  </span>
                  <span>
                    m
                  </span>
                  <span>
                    p
                  </span>
                  <span>
                    l
                  </span>
                  <span>
                    i
                  </span>
                  <span>
                    s
                  </span>
                  <span>
                    h
                  </span>
                  <span>
                    m
                  </span>
                  <span>
                    e
                  </span>
                  <span>
                    n
                  </span>
                  <span>
                    t
                  </span>
                  <span>
                    s
                  </span>
                </span>
                <ul
                  class="_accomplishmentList_c6a955"
                >
                  <li>
                    Delivered a massive project that single handedly  changed the fundamental relationship between the users  and their benefits (products, ie Virtual Mental Health visits, a user has access to).  This allowed about 25% of users, to retain a single login account for all of their benefits,  despite the multiple benefits the user may have had from Teladoc Health's multiple acquisitions.  It also set the pavement for better new/extension of client contracts,  as well as smarter and improved scalable integrations with all of Teladoc Health's acquisitions

                  </li>
                  <li>
                    Facilitated major improvements to one of our major codebase that reduced the  boilerplate code necessary to service newly acquired whitelabeled/branded clients. This resulted  in reduced development time from 2-3 months to 1-2 months,  thus servicing new clients up to two months faster

                  </li>
                </ul>
              </div>
            </div>
            <div
              class="_experience_c6a955"
            >
              <div
                class="_experienceContainer_c6a955"
              >
                <div
                  class="_experienceName_c6a955"
                >
                  <span>
                    Flatiron School
                  </span>
                </div>
                <div
                  class="_experienceHistoryContainer_c6a955"
                >
                  <div
                    class="_experienceTitle_c6a955"
                  >
                    <span>
                      Course Facilitator
                    </span>
                    <span>
                      02/2025 - Present
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="_experienceDescription_c6a955"
              >
                <span
                  class="_experienceHeader_c6a955"
                >
                  <span>
                    O
                  </span>
                  <span>
                    v
                  </span>
                  <span>
                    e
                  </span>
                  <span>
                    r
                  </span>
                  <span>
                    v
                  </span>
                  <span>
                    i
                  </span>
                  <span>
                    e
                  </span>
                  <span>
                    w
                  </span>
                </span>
                <p
                  class="_experienceSummary_c6a955"
                >
                  Code instructor at NuCamp Bootcamp, a technical "bootcamp" for adults looking to become Software Engineers

                </p>
              </div>
            </div>
            <div
              class="_experience_c6a955"
            >
              <div
                class="_experienceContainer_c6a955"
              >
                <div
                  class="_experienceName_c6a955"
                >
                  <span>
                    NuCamp Bootcamp
                  </span>
                </div>
                <div
                  class="_experienceHistoryContainer_c6a955"
                >
                  <div
                    class="_experienceTitle_c6a955"
                  >
                    <span>
                      Code Instructor
                    </span>
                    <span>
                      02/2022 - 02/2024
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="_experienceDescription_c6a955"
              >
                <span
                  class="_experienceHeader_c6a955"
                >
                  <span>
                    O
                  </span>
                  <span>
                    v
                  </span>
                  <span>
                    e
                  </span>
                  <span>
                    r
                  </span>
                  <span>
                    v
                  </span>
                  <span>
                    i
                  </span>
                  <span>
                    e
                  </span>
                  <span>
                    w
                  </span>
                </span>
                <p
                  class="_experienceSummary_c6a955"
                >
                  Code instructor at NuCamp Bootcamp, a technical "bootcamp" for adults looking to become Software Engineers

                </p>
              </div>
            </div>
            <div
              class="_experience_c6a955"
            >
              <div
                class="_experienceContainer_c6a955"
              >
                <div
                  class="_experienceName_c6a955"
                >
                  <span>
                    Research Foundation City University of New York
                  </span>
                </div>
                <div
                  class="_experienceHistoryContainer_c6a955"
                >
                  <div
                    class="_experienceTitle_c6a955"
                  >
                    <span>
                      Teacher Assistant
                    </span>
                    <span>
                      06/2023 - 08/2023
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="_experienceDescription_c6a955"
              >
                <span
                  class="_experienceHeader_c6a955"
                >
                  <span>
                    O
                  </span>
                  <span>
                    v
                  </span>
                  <span>
                    e
                  </span>
                  <span>
                    r
                  </span>
                  <span>
                    v
                  </span>
                  <span>
                    i
                  </span>
                  <span>
                    e
                  </span>
                  <span>
                    w
                  </span>
                </span>
                <p
                  class="_experienceSummary_c6a955"
                >
                  Teacher assistant at the RF CUNY Coding Bootcamp. A technical bootcamp for adults looking to become software engineers.  Here I help students to break down the concepts they learned in class, support students with their workload and review and grade the assignments submitted by the students

                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="_side_c6a955"
      >
        <div
          class="_section_c6a955"
        >
          <div
            aria-label="LINKS"
            aria-level="2"
            class="_sectionHeader_c6a955"
            role="heading"
          >
            <span
              aria-hidden="true"
            >
              L
            </span>
            <span
              aria-hidden="true"
            >
              I
            </span>
            <span
              aria-hidden="true"
            >
              N
            </span>
            <span
              aria-hidden="true"
            >
              K
            </span>
            <span
              aria-hidden="true"
            >
              S
            </span>
          </div>
          <div
            class="_linksContainer_c6a955"
          >
            <div
              class="_iconLinkContainer_c6a955"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-globe "
                data-icon="globe"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M352 256c0 22.2-1.2 43.6-3.3 64l-185.3 0c-2.2-20.4-3.3-41.8-3.3-64s1.2-43.6 3.3-64l185.3 0c2.2 20.4 3.3 41.8 3.3 64zm28.8-64l123.1 0c5.3 20.5 8.1 41.9 8.1 64s-2.8 43.5-8.1 64l-123.1 0c2.1-20.6 3.2-42 3.2-64s-1.1-43.4-3.2-64zm112.6-32l-116.7 0c-10-63.9-29.8-117.4-55.3-151.6c78.3 20.7 142 77.5 171.9 151.6zm-149.1 0l-176.6 0c6.1-36.4 15.5-68.6 27-94.7c10.5-23.6 22.2-40.7 33.5-51.5C239.4 3.2 248.7 0 256 0s16.6 3.2 27.8 13.8c11.3 10.8 23 27.9 33.5 51.5c11.6 26 20.9 58.2 27 94.7zm-209 0L18.6 160C48.6 85.9 112.2 29.1 190.6 8.4C165.1 42.6 145.3 96.1 135.3 160zM8.1 192l123.1 0c-2.1 20.6-3.2 42-3.2 64s1.1 43.4 3.2 64L8.1 320C2.8 299.5 0 278.1 0 256s2.8-43.5 8.1-64zM194.7 446.6c-11.6-26-20.9-58.2-27-94.6l176.6 0c-6.1 36.4-15.5 68.6-27 94.6c-10.5 23.6-22.2 40.7-33.5 51.5C272.6 508.8 263.3 512 256 512s-16.6-3.2-27.8-13.8c-11.3-10.8-23-27.9-33.5-51.5zM135.3 352c10 63.9 29.8 117.4 55.3 151.6C112.2 482.9 48.6 426.1 18.6 352l116.7 0zm358.1 0c-30 74.1-93.6 130.9-171.9 151.6c25.5-34.2 45.2-87.7 55.3-151.6l116.7 0z"
                  fill="currentColor"
                />
              </svg>
              <a
                href="https://jlurena.me"
                rel="noreferrer"
                target="_blank"
              >
                jlurena.me
              </a>
            </div>
            <div
              class="_iconLinkContainer_c6a955"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-github "
                data-icon="github"
                data-prefix="fab"
                focusable="false"
                role="img"
                viewBox="0 0 496 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
                  fill="currentColor"
                />
              </svg>
              <a
                href="https://github.com/jlurena"
                rel="noreferrer"
                target="_blank"
              >
                github.com/jlurena
              </a>
            </div>
            <div
              class="_iconLinkContainer_c6a955"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-medium "
                data-icon="medium"
                data-prefix="fab"
                focusable="false"
                role="img"
                viewBox="0 0 640 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M180.5,74.262C80.813,74.262,0,155.633,0,256S80.819,437.738,180.5,437.738,361,356.373,361,256,280.191,74.262,180.5,74.262Zm288.25,10.646c-49.845,0-90.245,76.619-90.245,171.095s40.406,171.1,90.251,171.1,90.251-76.619,90.251-171.1H559C559,161.5,518.6,84.908,468.752,84.908Zm139.506,17.821c-17.526,0-31.735,68.628-31.735,153.274s14.2,153.274,31.735,153.274S640,340.631,640,256C640,171.351,625.785,102.729,608.258,102.729Z"
                  fill="currentColor"
                />
              </svg>
              <a
                href="https://medium.com/@jlurena123"
                rel="noreferrer"
                target="_blank"
              >
                medium.com/@jlurena123
              </a>
            </div>
          </div>
        </div>
        <div
          class="_section_c6a955"
        >
          <div
            aria-label="SKILLS"
            aria-level="2"
            class="_sectionHeader_c6a955"
            role="heading"
          >
            <span
              aria-hidden="true"
            >
              S
            </span>
            <span
              aria-hidden="true"
            >
              K
            </span>
            <span
              aria-hidden="true"
            >
              I
            </span>
            <span
              aria-hidden="true"
            >
              L
            </span>
            <span
              aria-hidden="true"
            >
              L
            </span>
            <span
              aria-hidden="true"
            >
              S
            </span>
          </div>
          <div
            class="_skillsContainer_c6a955"
          >
            <ul
              class="_skillsList_c6a955"
            >
              <li>
                <span>
                  Object Oriented Programming
                </span>
                <ul>
                  <li>
                    Java
                  </li>
                  <li>
                    Javascript
                  </li>
                  <li>
                    Python
                  </li>
                  <li>
                    Ruby
                  </li>
                  <li>
                    Scala
                  </li>
                </ul>
              </li>
              <li>
                <span>
                  Libraries & Framework
                </span>
                <ul>
                  <li>
                    Android Studios
                  </li>
                  <li>
                    Node.js
                  </li>
                  <li>
                    Play Framework
                  </li>
                  <li>
                    React.js
                  </li>
                  <li>
                    Ruby on Rails
                  </li>
                </ul>
              </li>
              <li>
                <span>
                  Data Stores
                </span>
                <ul>
                  <li>
                    ElasticSearch
                  </li>
                  <li>
                    MySQL
                  </li>
                  <li>
                    PostgreSQL
                  </li>
                  <li>
                    Redis/Memcached
                  </li>
                </ul>
              </li>
              <li>
                <span>
                  Devops & Infrastructure
                </span>
                <ul>
                  <li>
                    AWS
                  </li>
                  <li>
                    Azure
                  </li>
                  <li>
                    Jenkins
                  </li>
                  <li>
                    Linux/Unix
                  </li>
                  <li>
                    Shell Scripting
                  </li>
                </ul>
              </li>
              <li>
                <span>
                  Project Management
                </span>
              </li>
              <li>
                <span>
                  Fluent in Spanish
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      class="_resumeFooter_c6a955"
    >
      <div
        class="_container_1af848"
      >
        <a
          aria-label="Open in new tab"
          href="http://localhost/?resumeOnly=true"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-up-right-from-square "
            data-icon="up-right-from-square"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M352 0c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9L370.7 96 201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L416 141.3l41.4 41.4c9.2 9.2 22.9 11.9 34.9 6.9s19.8-16.6 19.8-29.6l0-128c0-17.7-14.3-32-32-32L352 0zM80 32C35.8 32 0 67.8 0 112L0 432c0 44.2 35.8 80 80 80l320 0c44.2 0 80-35.8 80-80l0-112c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 112c0 8.8-7.2 16-16 16L80 448c-8.8 0-16-7.2-16-16l0-320c0-8.8 7.2-16 16-16l112 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L80 32z"
              fill="currentColor"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Resume > renders with showPrintButton=true and matches snapshot 1`] = `
<div>
  <div
    class="_wrapper_c6a955"
  >
    <div
      class="_resumeHeader_c6a955"
    >
      <div
        class="_main_c6a955"
      >
        <div
          class="_section_c6a955"
        >
          <div
            class="_details_c6a955"
          >
            <p
              class="_name_c6a955"
            >
              Jean Luis Ureña
            </p>
            <div
              class="_contact_c6a955"
            >
              <span>
                <span>
                  N
                </span>
                <span>
                  Y
                </span>
                <span>
                  C
                </span>
              </span>
              <span
                class="_separator_c6a955"
              >
                ·
              </span>
              <span>
                <span>
                  e
                </span>
                <span>
                  l
                </span>
                <span>
                  j
                </span>
                <span>
                  e
                </span>
                <span>
                  a
                </span>
                <span>
                  n
                </span>
                <span>
                  @
                </span>
                <span>
                  l
                </span>
                <span>
                  i
                </span>
                <span>
                  v
                </span>
                <span>
                  e
                </span>
                <span>
                  .
                </span>
                <span>
                  c
                </span>
                <span>
                  o
                </span>
                <span>
                  m
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="_side_c6a955"
      />
    </div>
    <div
      class="_resumeBody_c6a955"
    >
      <div
        class="_main_c6a955"
      >
        <div
          class="_section_c6a955"
        >
          <div
            aria-label="PROFILE"
            aria-level="2"
            class="_sectionHeader_c6a955"
            role="heading"
          >
            <span
              aria-hidden="true"
            >
              P
            </span>
            <span
              aria-hidden="true"
            >
              R
            </span>
            <span
              aria-hidden="true"
            >
              O
            </span>
            <span
              aria-hidden="true"
            >
              F
            </span>
            <span
              aria-hidden="true"
            >
              I
            </span>
            <span
              aria-hidden="true"
            >
              L
            </span>
            <span
              aria-hidden="true"
            >
              E
            </span>
          </div>
          <div
            class="_content_c6a955"
          >
            <div
              class="_experience_c6a955"
            >
              <div
                class="_experienceDescription_c6a955"
              >
                <p
                  class="_experienceSummary_c6a955"
                >
                  Software Engineering Lead focused on empowering and guiding teams on executing and delivering  quality, smart and scalable solutions that benefit all.

                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="_section_c6a955"
        >
          <div
            aria-label="EDUCATION"
            aria-level="2"
            class="_sectionHeader_c6a955"
            role="heading"
          >
            <span
              aria-hidden="true"
            >
              E
            </span>
            <span
              aria-hidden="true"
            >
              D
            </span>
            <span
              aria-hidden="true"
            >
              U
            </span>
            <span
              aria-hidden="true"
            >
              C
            </span>
            <span
              aria-hidden="true"
            >
              A
            </span>
            <span
              aria-hidden="true"
            >
              T
            </span>
            <span
              aria-hidden="true"
            >
              I
            </span>
            <span
              aria-hidden="true"
            >
              O
            </span>
            <span
              aria-hidden="true"
            >
              N
            </span>
          </div>
          <div
            class="_content_c6a955"
          >
            <div
              class="_experience_c6a955"
            >
              <div
                class="_experienceContainer_c6a955"
              >
                <div
                  class="_experienceName_c6a955"
                >
                  <span>
                    Rochester Institute of Technology
                  </span>
                </div>
                <div
                  class="_experienceHistoryContainer_c6a955"
                >
                  <div
                    class="_experienceTitle_c6a955"
                  >
                    <span>
                      B.S in Computer Science
                    </span>
                    <span>
                      Class of 2018
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="_section_c6a955"
        >
          <div
            aria-label="EXPERIENCE"
            aria-level="2"
            class="_sectionHeader_c6a955"
            role="heading"
          >
            <span
              aria-hidden="true"
            >
              E
            </span>
            <span
              aria-hidden="true"
            >
              X
            </span>
            <span
              aria-hidden="true"
            >
              P
            </span>
            <span
              aria-hidden="true"
            >
              E
            </span>
            <span
              aria-hidden="true"
            >
              R
            </span>
            <span
              aria-hidden="true"
            >
              I
            </span>
            <span
              aria-hidden="true"
            >
              E
            </span>
            <span
              aria-hidden="true"
            >
              N
            </span>
            <span
              aria-hidden="true"
            >
              C
            </span>
            <span
              aria-hidden="true"
            >
              E
            </span>
          </div>
          <div
            class="_content_c6a955"
          >
            <div
              class="_experience_c6a955"
            >
              <div
                class="_experienceContainer_c6a955"
              >
                <div
                  class="_experienceName_c6a955"
                >
                  <span>
                    Teladoc Health
                  </span>
                </div>
                <div
                  class="_experienceHistoryContainer_c6a955"
                >
                  <div
                    class="_experienceTitle_c6a955"
                  >
                    <span>
                      Software Engineering Manager
                    </span>
                    <span>
                      03/2022 - Present
                    </span>
                  </div>
                  <div
                    class="_experienceTitle_c6a955"
                  >
                    <span>
                      Senior Software Engineer,
                    </span>
                    <span>
                      03/2021, - 03/2022
                    </span>
                  </div>
                  <div
                    class="_experienceTitle_c6a955"
                  >
                    <span>
                      Software Engineer,
                    </span>
                    <span>
                      03/2020, - 03/2021
                    </span>
                  </div>
                  <div
                    class="_experienceTitle_c6a955"
                  >
                    <span>
                      Associate Software Engineer,
                    </span>
                    <span>
                      01/2018, - 03/2020
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="_experienceDescription_c6a955"
              >
                <span
                  class="_experienceHeader_c6a955"
                >
                  <span>
                    O
                  </span>
                  <span>
                    v
                  </span>
                  <span>
                    e
                  </span>
                  <span>
                    r
                  </span>
                  <span>
                    v
                  </span>
                  <span>
                    i
                  </span>
                  <span>
                    e
                  </span>
                  <span>
                    w
                  </span>
                </span>
                <p
                  class="_experienceSummary_c6a955"
                >
                  Manage, direct and guide software engineers in software design and architecture,  lead and mentor, ensure delivery and execution of cross functional projects. Work across various departments to ensure technological business needs are met, end to end.

                </p>
                <span
                  class="_experienceHeader_c6a955"
                >
                  <span>
                    M
                  </span>
                  <span>
                    a
                  </span>
                  <span>
                    j
                  </span>
                  <span>
                    o
                  </span>
                  <span>
                    r
                  </span>
                  <span>
                     
                  </span>
                  <span>
                    A
                  </span>
                  <span>
                    c
                  </span>
                  <span>
                    c
                  </span>
                  <span>
                    o
                  </span>
                  <span>
                    m
                  </span>
                  <span>
                    p
                  </span>
                  <span>
                    l
                  </span>
                  <span>
                    i
                  </span>
                  <span>
                    s
                  </span>
                  <span>
                    h
                  </span>
                  <span>
                    m
                  </span>
                  <span>
                    e
                  </span>
                  <span>
                    n
                  </span>
                  <span>
                    t
                  </span>
                  <span>
                    s
                  </span>
                </span>
                <ul
                  class="_accomplishmentList_c6a955"
                >
                  <li>
                    Delivered a massive project that single handedly  changed the fundamental relationship between the users  and their benefits (products, ie Virtual Mental Health visits, a user has access to).  This allowed about 25% of users, to retain a single login account for all of their benefits,  despite the multiple benefits the user may have had from Teladoc Health's multiple acquisitions.  It also set the pavement for better new/extension of client contracts,  as well as smarter and improved scalable integrations with all of Teladoc Health's acquisitions

                  </li>
                  <li>
                    Facilitated major improvements to one of our major codebase that reduced the  boilerplate code necessary to service newly acquired whitelabeled/branded clients. This resulted  in reduced development time from 2-3 months to 1-2 months,  thus servicing new clients up to two months faster

                  </li>
                </ul>
              </div>
            </div>
            <div
              class="_experience_c6a955"
            >
              <div
                class="_experienceContainer_c6a955"
              >
                <div
                  class="_experienceName_c6a955"
                >
                  <span>
                    Flatiron School
                  </span>
                </div>
                <div
                  class="_experienceHistoryContainer_c6a955"
                >
                  <div
                    class="_experienceTitle_c6a955"
                  >
                    <span>
                      Course Facilitator
                    </span>
                    <span>
                      02/2025 - Present
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="_experienceDescription_c6a955"
              >
                <span
                  class="_experienceHeader_c6a955"
                >
                  <span>
                    O
                  </span>
                  <span>
                    v
                  </span>
                  <span>
                    e
                  </span>
                  <span>
                    r
                  </span>
                  <span>
                    v
                  </span>
                  <span>
                    i
                  </span>
                  <span>
                    e
                  </span>
                  <span>
                    w
                  </span>
                </span>
                <p
                  class="_experienceSummary_c6a955"
                >
                  Code instructor at NuCamp Bootcamp, a technical "bootcamp" for adults looking to become Software Engineers

                </p>
              </div>
            </div>
            <div
              class="_experience_c6a955"
            >
              <div
                class="_experienceContainer_c6a955"
              >
                <div
                  class="_experienceName_c6a955"
                >
                  <span>
                    NuCamp Bootcamp
                  </span>
                </div>
                <div
                  class="_experienceHistoryContainer_c6a955"
                >
                  <div
                    class="_experienceTitle_c6a955"
                  >
                    <span>
                      Code Instructor
                    </span>
                    <span>
                      02/2022 - 02/2024
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="_experienceDescription_c6a955"
              >
                <span
                  class="_experienceHeader_c6a955"
                >
                  <span>
                    O
                  </span>
                  <span>
                    v
                  </span>
                  <span>
                    e
                  </span>
                  <span>
                    r
                  </span>
                  <span>
                    v
                  </span>
                  <span>
                    i
                  </span>
                  <span>
                    e
                  </span>
                  <span>
                    w
                  </span>
                </span>
                <p
                  class="_experienceSummary_c6a955"
                >
                  Code instructor at NuCamp Bootcamp, a technical "bootcamp" for adults looking to become Software Engineers

                </p>
              </div>
            </div>
            <div
              class="_experience_c6a955"
            >
              <div
                class="_experienceContainer_c6a955"
              >
                <div
                  class="_experienceName_c6a955"
                >
                  <span>
                    Research Foundation City University of New York
                  </span>
                </div>
                <div
                  class="_experienceHistoryContainer_c6a955"
                >
                  <div
                    class="_experienceTitle_c6a955"
                  >
                    <span>
                      Teacher Assistant
                    </span>
                    <span>
                      06/2023 - 08/2023
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="_experienceDescription_c6a955"
              >
                <span
                  class="_experienceHeader_c6a955"
                >
                  <span>
                    O
                  </span>
                  <span>
                    v
                  </span>
                  <span>
                    e
                  </span>
                  <span>
                    r
                  </span>
                  <span>
                    v
                  </span>
                  <span>
                    i
                  </span>
                  <span>
                    e
                  </span>
                  <span>
                    w
                  </span>
                </span>
                <p
                  class="_experienceSummary_c6a955"
                >
                  Teacher assistant at the RF CUNY Coding Bootcamp. A technical bootcamp for adults looking to become software engineers.  Here I help students to break down the concepts they learned in class, support students with their workload and review and grade the assignments submitted by the students

                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="_side_c6a955"
      >
        <div
          class="_section_c6a955"
        >
          <div
            aria-label="LINKS"
            aria-level="2"
            class="_sectionHeader_c6a955"
            role="heading"
          >
            <span
              aria-hidden="true"
            >
              L
            </span>
            <span
              aria-hidden="true"
            >
              I
            </span>
            <span
              aria-hidden="true"
            >
              N
            </span>
            <span
              aria-hidden="true"
            >
              K
            </span>
            <span
              aria-hidden="true"
            >
              S
            </span>
          </div>
          <div
            class="_linksContainer_c6a955"
          >
            <div
              class="_iconLinkContainer_c6a955"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-globe "
                data-icon="globe"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M352 256c0 22.2-1.2 43.6-3.3 64l-185.3 0c-2.2-20.4-3.3-41.8-3.3-64s1.2-43.6 3.3-64l185.3 0c2.2 20.4 3.3 41.8 3.3 64zm28.8-64l123.1 0c5.3 20.5 8.1 41.9 8.1 64s-2.8 43.5-8.1 64l-123.1 0c2.1-20.6 3.2-42 3.2-64s-1.1-43.4-3.2-64zm112.6-32l-116.7 0c-10-63.9-29.8-117.4-55.3-151.6c78.3 20.7 142 77.5 171.9 151.6zm-149.1 0l-176.6 0c6.1-36.4 15.5-68.6 27-94.7c10.5-23.6 22.2-40.7 33.5-51.5C239.4 3.2 248.7 0 256 0s16.6 3.2 27.8 13.8c11.3 10.8 23 27.9 33.5 51.5c11.6 26 20.9 58.2 27 94.7zm-209 0L18.6 160C48.6 85.9 112.2 29.1 190.6 8.4C165.1 42.6 145.3 96.1 135.3 160zM8.1 192l123.1 0c-2.1 20.6-3.2 42-3.2 64s1.1 43.4 3.2 64L8.1 320C2.8 299.5 0 278.1 0 256s2.8-43.5 8.1-64zM194.7 446.6c-11.6-26-20.9-58.2-27-94.6l176.6 0c-6.1 36.4-15.5 68.6-27 94.6c-10.5 23.6-22.2 40.7-33.5 51.5C272.6 508.8 263.3 512 256 512s-16.6-3.2-27.8-13.8c-11.3-10.8-23-27.9-33.5-51.5zM135.3 352c10 63.9 29.8 117.4 55.3 151.6C112.2 482.9 48.6 426.1 18.6 352l116.7 0zm358.1 0c-30 74.1-93.6 130.9-171.9 151.6c25.5-34.2 45.2-87.7 55.3-151.6l116.7 0z"
                  fill="currentColor"
                />
              </svg>
              <a
                href="https://jlurena.me"
                rel="noreferrer"
                target="_blank"
              >
                jlurena.me
              </a>
            </div>
            <div
              class="_iconLinkContainer_c6a955"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-github "
                data-icon="github"
                data-prefix="fab"
                focusable="false"
                role="img"
                viewBox="0 0 496 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
                  fill="currentColor"
                />
              </svg>
              <a
                href="https://github.com/jlurena"
                rel="noreferrer"
                target="_blank"
              >
                github.com/jlurena
              </a>
            </div>
            <div
              class="_iconLinkContainer_c6a955"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-medium "
                data-icon="medium"
                data-prefix="fab"
                focusable="false"
                role="img"
                viewBox="0 0 640 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M180.5,74.262C80.813,74.262,0,155.633,0,256S80.819,437.738,180.5,437.738,361,356.373,361,256,280.191,74.262,180.5,74.262Zm288.25,10.646c-49.845,0-90.245,76.619-90.245,171.095s40.406,171.1,90.251,171.1,90.251-76.619,90.251-171.1H559C559,161.5,518.6,84.908,468.752,84.908Zm139.506,17.821c-17.526,0-31.735,68.628-31.735,153.274s14.2,153.274,31.735,153.274S640,340.631,640,256C640,171.351,625.785,102.729,608.258,102.729Z"
                  fill="currentColor"
                />
              </svg>
              <a
                href="https://medium.com/@jlurena123"
                rel="noreferrer"
                target="_blank"
              >
                medium.com/@jlurena123
              </a>
            </div>
          </div>
        </div>
        <div
          class="_section_c6a955"
        >
          <div
            aria-label="SKILLS"
            aria-level="2"
            class="_sectionHeader_c6a955"
            role="heading"
          >
            <span
              aria-hidden="true"
            >
              S
            </span>
            <span
              aria-hidden="true"
            >
              K
            </span>
            <span
              aria-hidden="true"
            >
              I
            </span>
            <span
              aria-hidden="true"
            >
              L
            </span>
            <span
              aria-hidden="true"
            >
              L
            </span>
            <span
              aria-hidden="true"
            >
              S
            </span>
          </div>
          <div
            class="_skillsContainer_c6a955"
          >
            <ul
              class="_skillsList_c6a955"
            >
              <li>
                <span>
                  Object Oriented Programming
                </span>
                <ul>
                  <li>
                    Java
                  </li>
                  <li>
                    Javascript
                  </li>
                  <li>
                    Python
                  </li>
                  <li>
                    Ruby
                  </li>
                  <li>
                    Scala
                  </li>
                </ul>
              </li>
              <li>
                <span>
                  Libraries & Framework
                </span>
                <ul>
                  <li>
                    Android Studios
                  </li>
                  <li>
                    Node.js
                  </li>
                  <li>
                    Play Framework
                  </li>
                  <li>
                    React.js
                  </li>
                  <li>
                    Ruby on Rails
                  </li>
                </ul>
              </li>
              <li>
                <span>
                  Data Stores
                </span>
                <ul>
                  <li>
                    ElasticSearch
                  </li>
                  <li>
                    MySQL
                  </li>
                  <li>
                    PostgreSQL
                  </li>
                  <li>
                    Redis/Memcached
                  </li>
                </ul>
              </li>
              <li>
                <span>
                  Devops & Infrastructure
                </span>
                <ul>
                  <li>
                    AWS
                  </li>
                  <li>
                    Azure
                  </li>
                  <li>
                    Jenkins
                  </li>
                  <li>
                    Linux/Unix
                  </li>
                  <li>
                    Shell Scripting
                  </li>
                </ul>
              </li>
              <li>
                <span>
                  Project Management
                </span>
              </li>
              <li>
                <span>
                  Fluent in Spanish
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      class="_resumeFooter_c6a955"
    >
      <button
        class=" _btn_9c2c4d"
        type="button"
      >
        Print
      </button>
    </div>
  </div>
</div>
`;
